--- a/slepeweb-site-delivery/src/main/webapp/resources/sws/sass/_header.scss
+++ b/slepeweb-site-delivery/src/main/webapp/resources/sws/sass/_header.scss
@@ -21,11 +21,16 @@
 		text-shadow: none;
 	}
 
+	/* Left side of header, containing company logo */
 	div.left {
-		width: 360px;
+		width: 350px;
 		float: left;
+		@include extra-small-only {
+			width: 250px;
+		}
 	}
 
+	/* Right side of header, containing primary nav */
 	div.right {
 		width: auto;
 		float: right;
@@ -40,7 +45,7 @@
 		@include std-container-padding{}
 		font-size: 2em;
 	}
-
+	
 	/* This governs the primary nav in desktop mode */
 	.nav {
 		height: inherit;
@@ -106,32 +111,41 @@
 
 /* Banner */
 
-	#banner {
-		background: #f6f6f6;
-		padding: 8em 0;
-		text-align: center;
+#banner {
+	background: #f6f6f6;
+	padding: 8em 0;
+	text-align: center;
 
-		:last-child {
-			margin-bottom: 0;
-		}
+	:last-child {
+		margin-bottom: 0;
+	}
 
-		h2 {
-			font-size: 4em;
-			line-height: 1em;
-			margin: 0 0 0.5em 0;
-			padding: 0;
-		}
+	h2 {
+		font-size: 4em;
+		line-height: 1em;
+		margin: 0 0 0.5em 0;
+		padding: 0;
+	}
 
-		p {
-			font-size: 1.5em;
-			margin-bottom: 1.75em;
-		}
-		
-		@include extra-small-only {
-			padding: 5em 2em 4em 2em;
-		}
+	p {
+		font-size: 1.5em;
+		margin-bottom: 1.75em;
 	}
 	
+	@include extra-small-only {
+		padding: 5em 2em 4em 2em;
+	}
+}
+	
+/* To avoid changing the size of the company logo, shorten it for small devices */
+@include above-extra-small {
+	h1 > a {		
+		&:after {
+				content: "solutions";
+		}
+	}
+}
+
 #tiny-nav {
 	display: none;
 	
