--- a/slepeweb-site-delivery/src/main/webapp/resources/sws/sass/_mixins.scss
+++ b/slepeweb-site-delivery/src/main/webapp/resources/sws/sass/_mixins.scss
@@ -1,5 +1,11 @@
 @mixin extra-small-only {
-    @media only screen and (max-width : $transition-small-to-medium - 0.0625) {
+    @media only screen and (max-width : $transition-xsmall-to-small - 0.0625) {
+        @content;
+    }
+}
+
+@mixin above-extra-small {
+    @media only screen and (min-width : $transition-xsmall-to-small) {
         @content;
     }
 }
