--- a/slepeweb-site-delivery/src/main/webapp/resources/sws/sass/_vars.scss
+++ b/slepeweb-site-delivery/src/main/webapp/resources/sws/sass/_vars.scss
@@ -6,6 +6,7 @@
 	$size-border-width:			1px;
 	$size-element-height:		2em;
 	$size-element-margin:		2em;
+	$transition-xsmall-to-small: 	26em;
 	$transition-small-to-medium: 	48em;
 	$transition-nav: 							52em;
 	$transition-medium-to-large: 	96em;
